@@ -63,12 +63,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 477)
-(Parent-Version lpmud 3-3 476)
-(Version-Log "Added the program init/de-init code for OpenSSL.")
+(Project-Version lpmud 3-3 478)
+(Parent-Version lpmud 3-3 477)
+(Version-Log "Added the remaining bits and pieces for OpenSSL support.")
 (New-Version-Log
 "")
-(Checkin-Time "Wed, 13 Aug 2003 00:29:14 -0600")
+(Checkin-Time "Thu, 14 Aug 2003 00:22:42 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -106,20 +106,20 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.68 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.540 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.541 644))
   (HISTORY (lpmud/f/49_HISTORY 1.331 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
   ;; Configuration
-  (src/configure (lpmud/d/0_configure 1.19.1.86 755))
+  (src/configure (lpmud/d/0_configure 1.19.1.87 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.35 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.8 644))
   (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.21 644))
   (src/mkinstalldirs (lpmud/c/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/c/5_install-sh 1.2 755))
 
-  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.76 644))
+  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.77 644))
   (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.8 644))
 
   (src/settings/README (lpmud/c/22_README 1.14.1.15 644))
@@ -174,15 +174,15 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.26 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.17 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.16 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.59 644))
-  (src/comm.h (lpmud/d/3_comm.h 1.26.1.34 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.60 644))
+  (src/comm.h (lpmud/d/3_comm.h 1.26.1.35 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
   (src/dumpstat.c (lpmud/c/34_dumpstat.c 1.20.1.11.1.8 644))
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.30 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.19.1.3 644))
-  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.75 644))
+  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.76 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.7 644))
   (src/files.h (lpmud/i/49_files.h 1.2 644))
   (src/files.c (lpmud/i/50_files.c 1.20 644))
@@ -202,8 +202,8 @@
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.47 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.73 644))
-  (src/md5.h (lpmud/l/18_md5.h 1.2 644))
-  (src/md5.c (lpmud/l/19_md5.c 1.6 644))
+  (src/md5.h (lpmud/l/18_md5.h 1.3 644))
+  (src/md5.c (lpmud/l/19_md5.c 1.7 644))
   (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.8 644))
   (src/mempools.c (lpmud/d/49_mempools.c 1.2.1.12 644))
   (src/mregex.h (lpmud/e/29_rxcache.h 1.7.1.10 644))
@@ -271,8 +271,8 @@
   (src/pkg-pcre.c (lpmud/q/48_pcre-pcre. 1.5 644))
   (src/pkg-pgsql.c (lpmud/d/b/39_pkg-pgsql. 1.2 644))
   (src/pkg-pgsql.h (lpmud/d/b/40_pkg-pgsql. 1.1 644))
-  (src/pkg-tls.h (lpmud/e/b/10_pkg-tls.h 1.4 644))
-  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.4 644))
+  (src/pkg-tls.h (lpmud/e/b/10_pkg-tls.h 1.5 644))
+  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.5 644))
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.18 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.3 644))
@@ -1241,7 +1241,7 @@
   (doc/efun/tls_deinit_connection (lpmud/e/b/14_tls_deinit 1.2 644))
   (doc/efun/tls_error (lpmud/e/b/15_tls_error 1.2 644))
   (doc/efun/tls_init_connection (lpmud/e/b/16_tls_init_c 1.2 644))
-  (doc/efun/tls_query_connection_info (lpmud/e/b/17_tls_query_ 1.2 644))
+  (doc/efun/tls_query_connection_info (lpmud/e/b/17_tls_query_ 1.3 644))
   (doc/efun/tls_query_connection_state (lpmud/e/b/18_tls_query_ 1.2 644))
   (doc/efun/to_array (lpmud/q/45_to_array 1.6 644))
   (doc/efun/to_float (lpmud/q/46_to_float 1.4 644))
