@@ -748,7 +748,6 @@ fi
 # --- TLS ---
 
 has_tls=no
-savelibs="$LIBS"
 
 # Check for OpenSSL unless not desired
 
@@ -789,10 +788,32 @@ if test "$tls_package" = "any" -o "$tls_package" = "ssl"; then
         if test "$lp_cv_need_lib_ssl" = "yes"; then
             lp_cv_has_lib_ssl=no
             AC_CHECK_LIB(ssl,SSL_library_init,
-                         LIBS="$LIBS -lssl"
+                         PKGLIBS="$PKGLIBS -lssl"
                          lp_cv_has_lib_ssl=yes
                         )
         fi
+
+        if test "x$lp_cv_need_lib_crypto" != "xno"; then
+              AC_CACHE_CHECK(if -lcrypto is needed for SSL, lp_cv_need_lib_crypto,
+                  AC_TRY_RUN([
+#include <openssl/ssl.h>
+void t (void)
+{
+    DH *dhe1024 = NULL;
+    DH_free(dhe1024);
+}
+int main(void)
+{
+    return 0;
+}
+                  ],
+                  lp_cv_need_lib_crypto=no,
+                  lp_cv_need_lib_crypto=yes
+              ))
+              if test "$lp_cv_need_lib_crypto" = "yes"; then
+                  AC_CHECK_LIB(crypto,main, PKGLIBS="$PKGLIBS -lcrypto")
+              fi
+      fi
     else
         has_tls=no
     fi
@@ -838,7 +859,7 @@ if test "$tls_package" = "any" -o "$tls_package" = "gnu"; then
         if test "$lp_cv_need_lib_gnutls" = "yes"; then
             lp_cv_has_lib_gnutls=no
             AC_CHECK_LIB(gnutls,gnutls_global_init,
-                         LIBS="$LIBS -lgnutls"
+                         PKGLIBS="$PKGLIBS -lgnutls"
                          lp_cv_has_lib_gnutls=yes
                         )
         fi
@@ -856,7 +877,6 @@ if test "$has_tls" = no; then
     fi
     cdef_use_tls="#undef"
     enable_use_tls=no
-    LIBS="$savelibs"
 fi
 
 # --- PThreads ---
